# pytest-dummyjson-api

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  pyproject.toml  pytest.ini
.cache/flakes/: history.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  nightly.yml
artifacts/: dashboard.html  flake-report.md  junit-smoke.xml  metrics.json  metrics.md
dashboards/: dashboard.html
env/: .env.example
src/api_framework/: auth.py  client.py  config.py  redaction.py  validation.py
src/api_framework/clients/: auth_client.py  carts_client.py  comments_client.py  posts_client.py  products_client.py  recipes_client.py  users_client.py
tests/: conftest.py  test_auth_smoke.py  test_me_authenticated.py  test_users_regression.py  test_users_smoke.py
tests/auth/: test_auth_contract.py  test_auth_regression.py  test_auth_smoke.py  test_me_authenticated.py
tests/carts/: test_carts_contract.py  test_carts_regression.py  test_carts_smoke.py
tests/comments/: test_comments_contract.py  test_comments_regression.py  test_comments_smoke.py
tests/contracts/: test_users_contract.py
tests/posts/: test_posts_contract.py  test_posts_regression.py  test_posts_smoke.py
tests/products/: test_products_contract.py  test_products_regression.py  test_products_smoke.py
tests/recipes/: test_recipes_contract.py  test_recipes_regression.py  test_recipes_smoke.py
tests/schemas/: users_list.schema.json
tests/users/: test_users_contract.py  test_users_regression.py  test_users_smoke.py
tools/ci/: junit_summary.py
(+13 files in other folders)
