[project]
name = "pytest-reqres-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "jsonschema>=4.22.0",
  "tenacity>=8.3.0",
  "pytest-xdist>=3.6.0",
  "pytest-html>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "smoke: fast critical checks",
  "regression: broader coverage",
  "contract: schema/OpenAPI checks",
  "negative: error handling checks",
]
