[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-dummyjson-api"
version = "0.1.0"
description = "Production-grade API automation framework using pytest + httpx (DummyJSON)"
requires-python = ">=3.11,<3.13"

dependencies = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "jsonschema>=4.22.0",
  "tenacity>=8.3.0",
  "pytest-xdist>=3.6.0",
  "pytest-html>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -ra"
markers = [
  "smoke: fast critical checks",
  "regression: broader coverage",
  "contract: schema/OpenAPI checks",
  "negative: error handling checks",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
